Changed Read Me. Changed flex in .info from space-between to space-around

--- a/style.css
+++ b/style.css
@@ -164,9 +164,9 @@ footer {
 .info {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .icons {
@@ -261,8 +261,7 @@ h4 {
   }
   
   .info {
-    width: 95%;
-    font-size: 15px;
+    width: 70%;
   }
   
   .icons {
@@ -303,7 +302,6 @@ h4 {
   
   .info {
     width: 70%;
-    font-size: 17px;
   }
   
   .icons {
