--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 /*general*/
 html {
-  background:white;
+  background: white;
   color: black;
 }
 
@@ -12,19 +12,15 @@ a:link, a:visited {
  /*header*/
 header{
   margin-top: 20px;
-  margin-bottom: 0px;
 }
 
 nav{
   font-size: 22px;
   display: flex;
-  list-style-type: none;
   flex-wrap: nowrap;
   justify-content: space-evenly;
-  margin: 0;
   margin-top: 10px;
   margin-bottom: 40px;
-  padding: 0;
   font-family: 'Abril Fatface', cursive;
 }
 
@@ -35,19 +31,24 @@ body{
   padding: 8px;
 }
 
-.artistcards{
+.mainarticle{
+  text-align: justify;
+  background-color: rgb(111,44,69);
+  margin: 10px;
+}
+
+.artists{
   display: flex;
   flex-wrap: wrap;
 }
 
-.mainarticle{
+.artistcards{
   text-align: justify;
-  background-color: rgb(111,44,69);
-  padding-top: 0px;
-  padding-bottom: 20px;
-  margin-bottom: 15px;
-  margin-top: 0px;
-  border: 0px;
+  padding: 10px;
+  min-height: 260px;
+  width: 100%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .img-artist{
@@ -60,34 +61,33 @@ body{
   font-size: 15px;
   padding-top: 0px;
   padding-bottom: 0px;
-  margin-top: 0px;
+  margin-top: 5px;
   margin-bottom: 0px;
   text-align: right;
+}
+.p-mainarticle{
+  font-size: 20px;
 }
 
 p{
   font-family: 'Amiri', serif;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.3;
-  padding-left: 10px;
-  padding-right: 10px;
-  text-align: justify;
+  padding: 15px;
   font-weight: bold;
 }
 
 h1{
   font-family: 'Abril Fatface', cursive;
   font-size: 50px;
-  padding-top: 0px;
-  margin: 0px;
   line-height: 1.2;
 }
 
 h2{
   font-family: 'Abril Fatface', cursive;
   color: #FED298;
-  text-align: center;
-  font-size: 40px;
+  text-align: rightr;
+  font-size: 45px;
   margin-bottom: 0px;
   margin-top: 15px;
   padding-left: 10px;
@@ -97,9 +97,9 @@ h2{
 h3{
   font-family: 'Abril Fatface', cursive;
   text-align: right;
-  font-size: 35px;
+  font-size: 33px;
   padding-left: 10px;
-  padding-top: 0px;
+  padding-top: 15px;
   padding-right: 10px;
   padding-bottom: 0px;
   margin-bottom: 2px;
@@ -109,55 +109,34 @@ h3{
 /*artist cards*/
 .loyle{
   background-color:#7D7B73;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .barney{
   background-color:#A64C4B;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .cleo{
   background-color:#98FFC8;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .celeste{
   background-color: #DF2639;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .foxwarren{
   background-color: #55543E;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .joy{
   background-color:#5B4857;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 .arlo{
   background-color: #9A87E1;
-  height: 250px;
-  text-align: justify;
-  margin-bottom: 15px;
-  padding: 15px;
+  height: 100%;
 }
 
-@media (min-width: 767px) and (max-width: 991px){
+@media (min-width: 668px) and (max-width: 991px){
 /*header*/
 nav{
   font-size: 30px;
@@ -165,7 +144,7 @@ nav{
 /*body elements*/
 
 .artistcards{
-  flex: 300px;
+  flex: 250px;
   margin: 10px;
 }
 
