--- a/code/style.css
+++ b/code/style.css
@@ -1,19 +1,40 @@
-/* header-flexcontainer & content*/
-.main-container {
-  height: 100px;
-  display: flex;
+html {
+  background-color: #F0EEE9;
 }
-.head-container {
-  height: 150px;
-  margin: 2px;
-  border: 1px solid;
-  border-radius: 2px;
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
 
+/* header & it's content*/
+
+.header-container {
+  display: flex;
+  flex-wrap: wrap;
+     
+  }
+.header-logo {
+  min-width: 50%;
+  max-height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
-.tagline {
+.navigation {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+  border-bottom: 3px solid #CF5C78;   
+  
+  }
+.nav-link {
+  text-decoration: none;
   text-transform: uppercase;
-}
+  padding: 10px;
+  font-size: 14px;
+    }
 
+  /* Hover effect*/
+  .nav-link:hover {
+    color: #CF5C78;
+  }
