--- a/code/style.css
+++ b/code/style.css
@@ -9,15 +9,61 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  background-color: black;
   height: 65px;
   font-family: "Texturina", serif;
+  margin: 10px;
+}
+
+/* Site name and logo */
+
+.site-name {
+  display: flex;
+  align-items: center;
+}
+
+.site-name .logo {
+  width: 60px;
+  margin-right: 10px;
+  margin-left: 10px;
+  animation-name: logo;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
+
+@keyframes logo {
+  from {transform: rotate(10deg);}
+  to {transform: rotate(-10deg);}
+}
+
+.h1 {
+  color: black;
+  font-family: "Texturina", serif;
+  font-size: 36px;
+  margin-top: 15px;
+}
+
+@media (max-width: 767px) {
+  .site-name {
+    margin-right: 0;
+  }
+  .site-name .logo {
+    width: 50px;
+  }
 }
 
 /* NAVBAR */
 
 .navigation-container {
   display: flex;
+  justify-content: space-between;
+  height: 50px;
+  background-color: black;
+}
+
+.navigation-links {
+  display: flex;
+  justify-content: left;
 }
 
 .navigation-container .links {
@@ -38,7 +84,7 @@ body {
 
 /* Navigation bar and dropdown for mobile phones */
 
-.navigation-container .fa {
+.navigation-container .fa-bar {
   display: flex;
   flex-direction: column;
   color: white;
@@ -47,8 +93,8 @@ body {
   margin: 10px;
 }
 
-.navigation-container .fa:hover {
-  color: #AB529C;
+.navigation-container .fa-bar:hover {
+  opacity: 0.7;
 }
 
 .mobile-dropdown-content {
@@ -58,7 +104,7 @@ body {
   margin-left: -10px;
 }
 
-.navigation-container .fa:hover .mobile-dropdown-content {
+.navigation-container .fa-bar:hover .mobile-dropdown-content {
   display: flex;
   flex-direction: column;
   color:black;
@@ -88,51 +134,37 @@ body {
   color: #AB529C;
 }
 
+
 @media (min-width: 1024px) {
-  .navigation-container .fa {
+  /*.navigation-container .fa-bar {
     display: none;
-  }
+  }*/
   .topic {
     display: flex;
   }
 } 
 
-/* Site name and logo */
+/*** SOCIAL MEDIA BUTTONS ***/
 
-.site-name {
+.social-media-top {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.site-name .logo {
-  width: 60px;
+.social-media-top .fa {
+  padding: 10px;
+  background: white;
+  color: black;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
   margin-right: 10px;
-  margin-left: 10px;
-  animation-name: logo;
-  animation-duration: 1.5s;
+  border-radius: 50%;
 }
 
-@keyframes logo {
-  from {width: 20px;
-        height: 20px;}
-  to {width: 60px;
-      height: 60px;}
-}
-
-.h1 {
-  color: white;
-  font-family: "Texturina", serif;
-  font-size: 36px;
-  margin-top: 15px;
-}
-
-@media (max-width: 767px) {
-  .site-name {
-    margin-right: 0;
-  }
-  .site-name .logo {
-    width: 50px;
-  }
+.fa:hover {
+  opacity: 0.7;
 }
 
 /*** HEADER TWO ***/
@@ -285,7 +317,7 @@ body {
 
 .social-media {
   display: flex;
-  align-items: center;
+  justify-content: right;
 }
 
 .social-media .fa {
@@ -302,6 +334,8 @@ body {
 .fa:hover {
   opacity: 0.7;
 }
+
+
 
 @media (max-width: 767px) {
   .footer-text {
