added flext-start to the content of the small news card

--- a/code/style.css
+++ b/code/style.css
@@ -135,9 +135,8 @@ p {
     display: flex;
     flex-direction: column;
     justify-items: center;
-    justify-content: center;
+    justify-content:flex-start;
     text-align: center;
-    
 }
 
 .sn-img-container {
