--- a/code/style.css
+++ b/code/style.css
@@ -143,7 +143,8 @@ p {
 .sn-img-container {
     overflow: hidden;
     padding-bottom: 20px;
-    box-shadow: 10px 10px 5px grey;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 
+                0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
 
 .sn-img-container img {
