--- a/code/style.css
+++ b/code/style.css
@@ -164,13 +164,10 @@ a:hover {
 
 /*                                         END                                           */
 
-
-/*ARE NOT ABLE TO DO MEDIA Q, SOMETHING WENT WRONG AND I CANNOT FIGURE OUT WHY*/
-
 .texttwo {
     display: flex;
     justify-content: space-evenly;
-    flex wrap: wrap;
+    flex-wrap: wrap;
     width: 100%;
 }
 
